BUG fix. thumbContainer always covered by link
If example title is not long enough, the link to the example file would
not extend right enough to cover the complet thumbContainer.

--- a/sphinxgallery/_static/gallery.scss
+++ b/sphinxgallery/_static/gallery.scss
@@ -20,6 +20,7 @@ div.sphx-glr-thumbContainer {
 	position: absolute;
 	padding: 150px 10px 0px 10px;
 	top: 0px;
+	right: 0px;
 	bottom: 0px;
 	left: 0px;
 	}
